# mastermind

./: .gitignore  Cargo.toml  README.md  main.py  mastermind.pyd
src/: lib.rs
